/Implementation/WebTier/Build/Libraries/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,14 @@
 /Implementation/WebTier/.settings
 /Implementation/WebTier/Binaries/
 /Implementation/WebTier/Build/Distribution/
+/Implementation/WebTier/Build/Libraries/
 /Implementation/WebTier/Build/Logs/
 /Implementation/WebTier/Build/Reports/
 /Implementation/WebTier/Build/Temp/
 /Implementation/WebTier/Build/build.num
 /Implementation/WebTier/Build/local.build.properties
+/Implementation/WebTier/JsUnit/
+/Implementation/WebTier/Libraries/
 /Implementation/WebTier/Logs/ProcessPuzzle.log
 /Implementation/WebTier/TEST-net.jsunit.StandaloneTest.xml
 
